# rust2go

./: Cargo.toml  README.md
docs/: trait-attrs.md
example/: Cargo.toml  README.md
example/go/: gen.go
example/src/: user.rs
monoio-rust2go/: Cargo.toml
monoio-rust2go-cli/: Cargo.toml
monoio-rust2go-cli/src/: lib.rs  main.rs
monoio-rust2go-common/: Cargo.toml
monoio-rust2go-common/src/: raw_file.rs
monoio-rust2go-macro/: Cargo.toml
monoio-rust2go-macro/src/: lib.rs
monoio-rust2go/src/: build.rs  lib.rs
test/: Cargo.toml  README.md  build.rs
test/go/: gen.go
test/src/: user.rs
