[workspace]
members = [
    "monoio-rust2go",
    "monoio-rust2go-cli",
    "monoio-rust2go-macro",
    "monoio-rust2go-common",
    "example",
    "test",
]
resolver = "2"

[workspace.package]
authors = ["ihciah <ihciah@gmail.com>"]
categories = ["development-tools::ffi", "external-ffi-bindings"]
description = "Calling go from Rust with FFI."
edition = "2021"
keywords = ["ffi", "golang", "go", "async"]
license = "MIT/Apache-2.0"
repository = "https://github.com/monoio-rs/rust2go"
