[package]
name = "example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
monoio-rust2go = { path = "../monoio-rust2go" }
monoio = { version = "0.2", features = ["sync"] }

[build-dependencies]
monoio-rust2go = { path = "../monoio-rust2go", features = ["build"] }

[[bin]]
name = "example"
path = "src/main.rs"
