[package]
name = "monoio-rust2go-cli"
version = "0.3.0"

description = "Monoio Rust2go commandline tool."

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
monoio-rust2go-common = { version = "0.3.0", path = "../monoio-rust2go-common" }

clap = { version = "4", features = ["derive"] }
cbindgen = { version = "0.26", default-features = false }

[[bin]]
name = "monoio-rust2go-cli"
path = "src/main.rs"
