[package]
name = "monoio-rust2go"
version = "0.3.0"

description = "Monoio Rust2go main shared library."

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
monoio-rust2go-macro = { version = "0.3.0", path = "../monoio-rust2go-macro" }
monoio-rust2go-cli = { version = "0.3.0", path = "../monoio-rust2go-cli", optional = true }

bindgen = { version = "0.69", optional = true }
syn = { version = "2", features = ["full"], optional = true }

[features]
default = []
build = ["syn", "bindgen", "monoio-rust2go-cli"]
